# treestat

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-pypi.yml  release-binaries.yml
data/: linguist_languages.yml
src/: cli.rs  lang.rs  lib.rs  main.rs  model.rs  render.rs  scanner.rs
tests/: cli.rs  unit.rs
