[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "treestat-cli"
version = "0.1.0"
description = "A CLI that displays source file counts in a tree view by directory and language"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "chouzz" }
]
keywords = ["cli", "trees", "code", "files", "rust"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.maturin]
bindings = "bin"
